--- a/tcc/tcc.bib
+++ b/tcc/tcc.bib
@@ -275,3 +275,71 @@ author = {Pålsson, A., and Szerszen, D.},
  title = {Sentiment Classification in Social Media: An Analysis of Methods and the Impact of Emoticon Removal (Dissertation)},
  year  = {2016}
 }
+@article{Hearst:1998:SVM:630302.630387,
+ author = {Hearst, Marti A.},
+ title = {Support Vector Machines},
+ journal = {IEEE Intelligent Systems},
+ issue_date = {July 1998},
+ volume = {13},
+ number = {4},
+ month = jul,
+ year = {1998},
+ issn = {1541-1672},
+ pages = {18--28},
+ numpages = {11},
+ url = {http://dx.doi.org/10.1109/5254.708428},
+ doi = {10.1109/5254.708428},
+ acmid = {630387},
+ publisher = {IEEE Educational Activities Department},
+ address = {Piscataway, NJ, USA},
+} 
+@article{Berger:1996:MEA:234285.234289,
+ author = {Berger, Adam L. and Pietra, Vincent J. Della and Pietra, Stephen A. Della},
+ title = {A Maximum Entropy Approach to Natural Language Processing},
+ journal = {Comput. Linguist.},
+ issue_date = {March 1996},
+ volume = {22},
+ number = {1},
+ month = mar,
+ year = {1996},
+ issn = {0891-2017},
+ pages = {39--71},
+ numpages = {33},
+ url = {http://dl.acm.org/citation.cfm?id=234285.234289},
+ acmid = {234289},
+ publisher = {MIT Press},
+ address = {Cambridge, MA, USA},
+} 
+
+@inproceedings{Esuli2006sentiwordnet,
+  added-at = {2009-01-29T21:09:18.000+0100},
+  author = {Esuli, Andrea and Sebastiani, Fabrizio},
+  biburl = {https://www.bibsonomy.org/bibtex/23e410e9b5d848e4e315b292253b6ed9d/hkorte},
+  booktitle = {In Proceedings of the 5th Conference on Language Resources and Evaluation (LREC’06},
+  interhash = {12da884807d2866aa148cde8b036d2c4},
+  intrahash = {3e410e9b5d848e4e315b292253b6ed9d},
+  keywords = {WordNet opinion_mining semantics},
+  pages = {417--422},
+  timestamp = {2009-01-29T21:09:18.000+0100},
+  title = {SENTIWORDNET: A publicly available lexical resource for opinion mining},
+  url = {SENTIWORDNET: A publicly available lexical resource for opinion mining},
+  year = 2006
+}
+
+@book{Widenius:2002:MRM:560480,
+ author = {Widenius, Michael and Axmark, Davis},
+ editor = {DuBois, Paul},
+ title = {Mysql Reference Manual},
+ year = {2002},
+ isbn = {0596002653},
+ edition = {1st},
+ publisher = {O'Reilly \& Associates, Inc.},
+ address = {Sebastopol, CA, USA},
+} 
+@book{Iverson:2004:HJD:1044870,
+ author = {Iverson, Will},
+ title = {Hibernate: A J2EE(TM) Developer's Guide},
+ year = {2004},
+ isbn = {0321268199},
+ publisher = {Addison-Wesley Professional},
+} 
