--- a/tcc/tcc.tex
+++ b/tcc/tcc.tex
@@ -117,6 +117,7 @@ Banca examinadora:\par
 \acro{JSON}[JSON]{\textit{JavaScript Object Notation}}
 \acro{POJO}[POJO]{\textit{Plain Old Java Objects}}
 \acro{SVM}[SVM]{\textit{Support Vector Machines}}
+\acro{API}[API]{\textit{Application Programming Interface}}
 \end{acronym}
 \listoffigures
 \listoftables
@@ -127,25 +128,46 @@ Banca examinadora:\par
 
 \begin{abstract}
 
-Nos tempos atuais, a sociedade tem cada vez mais se expressado através de Redes
-Sociais, dentre várias redes sociais, se destaca o Reddit, no qual além de ser
-uma das maiores redes sociais no mundo, é uma rede social de \textit{links},
-aonde usuários postam e comentam sobre estes gerando um grande volume de dados que muitas vezes se dão por
-ignorados.
+A sociedade tem cada vez mais se expressado através de Redes
+Sociais, sendo que entre essas se destaca o
+Reddit. De fato, essa é uma das maiores redes sociais no mundo, aonde os
+usuários postam \textit{links} e comentam sobre estes, gerando um grande volume
+de dados que muitas vezes são ignorados.
 
-A identificação de padrões de sentimentos expressos por grupos dessa comunidade, se faz útil visto que a partir dessa avaliação é possível construir ferramentas que apoiam decisões tanto de um ponto de vista político, como por
-exemplo, entender qual é a opinião sobre um determinado assunto de um conjunto
-de eleitores, tanto quanto um ponto de vista de negócios, para entender qual a
-opinião dos consumidores de um produto, ou de seu competidor, a respeito de um
-determinado assunto.
+A identificação de padrões de sentimentos expressos por grupos dessa comunidade,
+se torna útil visto que a partir dessa avaliação é possível construir
+ferramentas que apoiam decisões tanto de um ponto de vista político e econômico.
+Por exemplo, a partir desta é possível identificar a opinião dos usuários em
+relação a um candidato em uma eleição ou a aceitação dos consumidores de um novo
+produto.
 
-Neste volume serão apresentados estudos sobre o Processamento de Linguagem
-Natural e Análise de Sentimentos, os quais apresenta o objetivo da criação de um
-\textit{software} no qual seja possível efetuar a análise de sentimentos na rede
-social Reddit.
+Assim, neste trabalho será desenvolvido um \textit{software} no qual seja
+possível efetuar a análise de sentimentos na rede social Reddit. Essa será
+desenvolvida utilizando o método de \ac{VADER}, através do \textit{framework}
+\ac{NLTK}.
 
 \end{abstract}
 
+\begin{englishabstract}{}{Reddit, Natural Language Processing, Sentiment
+Analysis}
+
+The society has been increasingly expressing themselves through social networks,
+which from among those, the one who stand out is Reddit. Indeed, this is one of
+the biggest social networks in the world, where the users send links and comment
+those, generating a big volume of data, which a lot of times get ignored.
+
+The identification of sentiment patterns expressed by groups of that community
+make itself useful because from that evaluation, is possible the build tools
+that support decisions in both political point of view, as well an economic
+point of view. For an example, with that, it is possible to identify the users's
+opinion regarding an election candidate or the costumers acceptance of a new
+product.
+
+Therefore, in this work will be developed a software capable of performing a
+sentiment analysis on the Reddit social network. This will be developed using
+the \ac{VADER} method through the \ac{NLTK} \textit{framework}.
+
+\end{englishabstract}
 
 \acresetall
 
