--- a/tcc/capitulos/introducao.tex
+++ b/tcc/capitulos/introducao.tex
@@ -65,20 +65,24 @@ trabalho, os seguintes objetivos específicos devem ser realizados:
 
 \section{Estrutura do Trabalho}
 
-O presente trabalho está estruturado da seguinte forma: no Capítulo
-\ref{cap:Processamento} será apresentado uma introdução ao Processamento de
-Linguagem Natural, assim como uma introdução a métodos estatísticos e
-simbólicos a fim de demonstrar a diferença entre ambos.
-
-No Capítulo \ref{cap:Classificadores} será apresentada uma descrição da análise
-de sentimentos, e métodos estatísticos e simbólicos aplicados nessa análise a fim de se determinar o
-método de análise de sentimentos a ser utilizado. Por fim, este apresenta
-a forma de implementação do método selecionado. 
-
-O Capítulo \ref{cap:banco} tem
-o objetivo de descrever a forma que foi criado e populado o banco de dados para a análise de sentimentos, descrevendo a rede social em questão, os tópicos
-selecionados para a criação da base e a implementação para extração dos
-comentários para criação da base.
+O presente trabalho está estruturado da seguinte forma: 
+\begin{itemize}
+  \item No Capítulo \ref{cap:Processamento} será apresentado uma introdução ao
+  Processamento de Linguagem Natural, assim como uma introdução a métodos
+  estatísticos e simbólicos. 
+  \item No Capítulo \ref{cap:Classificadores} será
+  apresentada uma descrição da análise de sentimentos, e métodos estatísticos e
+  simbólicos aplicados para a análise de sentimentos. Por fim, é apresentado o
+  método \ac{VADER} que é o método que será utilizado neste trabalho e também a
+  biblioteca \ac{NLTK} a qual implementa este método.
+  \item O Capítulo \ref{cap:banco} tem
+o objetivo de descrever a base criada para o desenvolvimento do trabalho.
+Neste Capítulo é descrita a rede Reddit e os tópicos selecionados para a criação
+da base e a implementação desenvolvida para a extração dos comentários destes
+tópicos.
+\item No Capítulo \ref{cap:conclusao} temos as considerações parciais do
+trabalho, bem como o cronograma de andamento do mesmo.
+\end{itemize}
 
 %O presente trabalho está estruturado da seguinte forma: no Capítulo
 % \ref{cap:Animacao} será apresentada a história da animação, seu surgimento e conceitos. No Capítulo \ref{cap:Blender} são apresentadas informações sobre o \textit{software} Blender, assim como os métodos disponíveis nesse para a criação de animações 3D. No Capítulo \ref{cap:Kinect} será apresentado o sensor Kinect, assim como seu funcionamento e alguns conceitos sobre as imagens capturadas. No Capítulo \ref{cap:DesenvKinect} serão apresentadas as bibliotecas e ferramentas para o desenvolvimento de aplicações utilizando Kinect. Além disso, é realizado um comparativo, onde são apresentadas as vantagens e desvantagens de cada uma dessas ferramentas. No Capítulo \ref{cap:AplicaIntegra} serão apresentados alguns \textit{softwares} que já fazem a integração entre o sensor e a ferramenta, assim como o funcionamento desses. No Capítulo \ref{cap:Implementacao} serão apresentados os detalhes da solução desenvolvida e da animação gerada, bem como são apresentados os testes realizados e os resultados obtidos. Por fim, no Capítulo \ref{cap:Consideracoes} são apresentadas as considerações finais e sugestões de trabalhos futuros.
